--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@fortawesome/free-brands-svg-icons": "^6.4.2",
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@fortawesome/svelte-fontawesome": "^0.2.0",
+		"firebase": "^10.5.2",
 		"svelte-fontawesome": "^0.0.3"
 	}
 }
