Full auth setup done

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@fortawesome/svelte-fontawesome": "^0.2.0",
 		"firebase": "^10.5.2",
-		"svelte-fontawesome": "^0.0.3"
+		"svelte-fontawesome": "^0.0.3",
+		"svelte-routing": "^2.6.0"
 	}
 }
