--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
+		"@types/uuid": "^9.0.6",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-fa": "^3.0.4",
@@ -28,7 +29,9 @@
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@fortawesome/svelte-fontawesome": "^0.2.0",
 		"firebase": "^10.5.2",
+		"mongodb": "^6.2.0",
 		"svelte-fontawesome": "^0.0.3",
-		"svelte-routing": "^2.6.0"
+		"svelte-routing": "^2.6.0",
+		"uuid": "^9.0.1"
 	}
 }
